--- a/index.html
+++ b/index.html
@@ -8,6 +8,6 @@
     <title>Document</title>
 </head>
 <body>
-    <p>Saya Belajar Git ygy</p>
+    <p>Saya Belajar Git Biar Keren</p>
 </body>
 </html>
