--- a/percobaan.html
+++ b/percobaan.html
@@ -7,8 +7,8 @@
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Open+Sans:400,600" />
     <link rel="stylesheet" href="css/all.min.css" />
     <link rel="stylesheet" href="css/bootstrap.min.css" />
-    <link rel="stylesheet" href="css/templatemo-style.css" />
-    <title>Mini Profile - Free Bootstrap CSS Template</title>
+    <a href="http://ZirjyZakwanFayyadhiya.com">about Me</a>
+    <title>RPL Ni bos Senggol dong>
     
 <!--
 Mini Profile Template
